small change to test things

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <li>git branch [branch name] <br> <span class="fileName">This command creates a new branch.</span></li>
           <li>git checkout [branch name]<br> <span class="fileName">This command is used to switch from one branch to another.</span></li>
           <li>git checkout -b [branch name]<br> <span class="fileName">This command is used to createa new branch.</span></li>
-          <li>git merge</li>
+          <li> <a href="https://www.varonis.com/blog/git-branching">git merge</a> <br> <span class="fileName">To merge branches locally, use git checkout to switch to the branch you want to merge into. This branch is typically the main branch. Next, use git merge and specify the name of the other branch to bring into this branch.</span> </li>
           <li>git remote</li>
           <li>git push <br><span class="fileName">The git push command is used to upload local repository content to a remote repository.</span> </li>
           <li>git pull</li>
