--- a/index.html
+++ b/index.html
@@ -49,9 +49,14 @@
 
         <h3>Commun commands:</h3>
         <p class="smallText">"stolen" from <a target="_blank" href="https://dzone.com/articles/top-20-git-commands-with-examples">here</a> </p>
-        <p>On the commandline, navigate to the project folder...</p>
+        <p>When using git to backup a project, the first step is to use terminal to navigate to the project folder.</p>
+        <p>Then we have to log in to our account:</p>
         <ul>
-            <li>git --version <br> <span class="fileName">Find out if Git is installed on the computer by asking for the installed version.</span> </li>
+            <li>git config --global user.name "Your Name Comes Here"</li>
+            <li>git config --global user.email you@yourdomain.example.com</li>
+        </ul>
+        <h2>Commands</h2>
+        <ul>
           <li>git init <br> <span class="fileName">Creates a Repository on that folder</span> </li>
           <li>git status <br> <span class="fileName">Shows inf about the status of the commit</span> </li>
           <li>git add Board.pde <br>  <span class="fileName">Adds the file Board.pde to the Staging Area</span> </li>
@@ -74,12 +79,14 @@
           <li>git branch [branch name] <br> <span class="fileName">This command creates a new branch.</span></li>
           <li>git checkout [branch name]<br> <span class="fileName">This command is used to switch from one branch to another.</span></li>
           <li>git checkout -b [branch name]<br> <span class="fileName">This command is used to createa new branch.</span></li>
-          <li> <a href="https://www.varonis.com/blog/git-branching">git merge</a> <br> <span class="fileName">To merge branches locally, use git checkout to switch to the branch you want to merge into. This branch is typically the main branch. Next, use git merge and specify the name of the other branch to bring into this branch.</span> </li>
+          <li>git merge</li>
           <li>git remote</li>
-          <li>git push <br><span class="fileName">The git push command is used to upload local repository content to a remote repository.</span> </li>
+          <li>git push</li>
           <li>git pull</li>
           <li>git stash</li>
         </ul>
+        <h2>Flags</h2>
+        <p></p>
       </div>
       <div class="sideBars"></div>
     </div>
